// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform color modifiers should have class names applied 1`] = `
Object {
  "className": "has-background-info has-text-success",
}
`;

exports[`Transform helpers modifiers should have class names applied 1`] = `
Object {
  "className": "is-clearfix is-clipped is-hidden is-invisible is-marginless is-overlay is-paddingless is-pulled-right is-radiusless is-shadowless is-unselectable",
}
`;

exports[`Transform modifiers should not clear out unknown props 1`] = `
Object {
  "unknowwn": true,
}
`;

exports[`Transform modifiers should run all sub-modifiers 1`] = `
Object {
  "className": "has-background-info is-clearfix is-italic",
}
`;

exports[`Transform typography modifiers should have class names applied 1`] = `
Object {
  "className": "has-text-centered has-text-weight-light is-size-1 is-capitalized is-italic",
}
`;
